# fault_simulator

./: .gitignore  Cargo.toml  Console_1.txt  Diagram.md  LICENSE  README.md  Register R0 : 0x8000011A.rs  build.rs
.devcontainer/: Dockerfile  devcontainer.json
.github/skills/fault-attack-investigation/: SKILL.md
.github/workflows/: rust.yml
Content/: Makefile
Content/include/: common.h  fih_mem.h  utils.h
Content/include/bootutil/: fault_injection_hardening.h
Content/include/mcuboot_config/: mcuboot_config.h
Content/src/: common.c  fault_injection_hardening.c  fih_mem.c  main.c  utils.c
Content/src/examples/: main_0.c  main_1.c  main_2.c  main_3.c  main_4.c  main_5.c
Docs/: ClassDiagram.md
assets/: overview_double_fault.drawio
benches/: my_benchmark.rs
content/: Makefile  compile_flags.txt
content/include/: common.h  utils.h
content/include/bootutil/: fault_injection_hardening.h
content/src/: common.c  fault_injection_hardening.c  main.c  utils.c
content/src/aarch32/: bl1.lds  entry.S  victim.lds
content/src/examples/: main_0.c  main_1.c  main_2.c  main_3.c  main_3b.c  main_4.c  main_5.c  test.c
doc/: Fault_Attack_Compiler_Mitigation_Techniques.md  Fault_Attack_Mitigation_Techniques.md  MCP_Investigation_Guide.md
doc/MCP Example/: investigation_victim.md
docs/: ClassDiagram.md  Diagram.md
ghidra_scripts/: fault_simulator_vis.py
native/src/: init.c
src/: attack.rs  compile.rs  config.rs  deserializers.rs  disassembly.rs  elf_file.rs  fault_attack_thread.rs  fault_attacks.rs  lib.rs  main.rs  mcp_server.rs  report.rs  simulation.rs  simulation_thread.rs  user_thread.rs
src/fault_attacks/: disassembly.rs  elf_file.rs  mod.rs  simulation.rs  user_thread.rs
src/fault_attacks/control/: mod.rs
src/fault_attacks/control/cpu/: mod.rs
src/fault_attacks/faults/: bitflip.rs  cmd_bitflip.rs  example.rs  glitch.rs  mod.rs  register_bitflip.rs  register_flood.rs
src/fault_attacks/simulation/: fault_injections.rs  mod.rs
src/fault_attacks/simulation/fault_injections/: callback.rs  mod.rs
src/simulation/: callback.rs  fault.rs  fault_data.rs  fault_injections.rs  mod.rs  record.rs
src/simulation/cpu/: callback.rs  mod.rs
src/simulation/fault_injections/: callback.rs
src/simulation/faults/: bitflip.rs  glitch.rs  mod.rs
tests/: integration_test.rs  test_config.json  test_config.json5  test_config_code_patch.json  test_config_code_patch.json5  test_config_code_patch_symbol.json  test_config_code_patch_symbol.json5  test_config_code_patch_symbol_offset.json5  test_config_initial_registers.json  test_config_initial_registers.json5  test_config_memory_region.json  test_config_memory_region.json5  test_config_result_checks.json5
