[package]
name = "fault_simulator"
authors = ["Roland Ebrecht", "Luca Gladiator"]
version = "0.8.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "my_benchmark"
harness = false

build = "build.rs"
[build-dependencies]
mml = { git = 'https://github.com/adjivas/ml.git', branch = 'master' }

[dependencies]
# unicorn-engine = { git = 'https://github.com/unicorn-engine/unicorn.git', branch = 'dev' }
unicorn-engine = "2.1.3"
elf = "0.7.0"
log = "0.4.17"
env_logger = "0.11.1"
capstone = "0.11.0"
git-version = "0.3.9"
rayon = "1.10.0"
itertools = "0.12.0"
clap = { version = "4.5.3", features = ["derive"] }
mml = { git = 'https://github.com/adjivas/ml.git', branch = 'master' }
addr2line = "0.21.0"
regex = "1.10.5"
colored = "2.1.0"
