[package]
name = "fault_simulator"
authors = ["Roland Ebrecht", "Dominik Zürner", "Luca Gladiator"]
version = "2.0.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
assert_cmd = "2.0.17"
predicates = "3.1.3"

[[bench]]
name = "my_benchmark"
harness = false

[[bin]]
name = "fault_simulator_mcp"
path = "src/mcp_server.rs"

[build-dependencies]
mml = { git = 'https://github.com/adjivas/ml.git', branch = 'master' }

[dependencies]
unicorn-engine = "=2.1.5"
elf = "0.7.0"
log = "0.4.17"
env_logger = "0.11.1"
capstone = "0.11.0"
git-version = "0.3.9"
itertools = "0.12.0"
clap = { version = "4.5.3", features = ["derive"] }
mml = { git = 'https://github.com/adjivas/ml.git', branch = 'master' }
addr2line = "0.21.0"
regex = "1.10.5"
colored = "2.1.0"
crossbeam-channel = "0.5.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4.1"
rmcp = { version = "1", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
schemars = "1"
libc = "0.2"
